--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="./img/favicon.ico">
-	<title>Wialon One</title>
+	<title>zanFlow</title>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	<script type="text/javascript" src="./js/jquery-1.8.3.min.js"></script>
