--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 	<div id="page">
 		<div id="header">
-			<img id="logo" src="./img/Zanzora 2.png" alt="One wialon" />
+			<img id="logo" src="./img/Zanzora 2.png" alt="zanFlow" />
 			<span id="app-name">zanFlow</span>
 			<div id="user_info">
 				<span id="user_name_id"></span>
@@ -90,6 +90,7 @@
 					</table>
 				</div>
 			</div>
+			<input type="text" name="sid" id="sid">
 			<div id="right_column">
 				<div id="map_id"></div>
 			</div>
