--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 				</div>
 			</div>
 			<input type="text" name="sid" id="sid">
+			<button id="setSidButton"> new value</button>
 			<div id="right_column">
 				<div id="map_id"></div>
 			</div>
