--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 	<link rel="icon" type="image/png" href="./img/favicon.ico">
 	<title>zanFlow</title>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+	<script src="./js/leatflet.js"></script>
 	<script type="text/javascript" src="./js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.localisation.js"></script>
 	<link rel="stylesheet" type="text/css" href="./css/style.css" />
-	<script src="http://apps.wialon.com/plugins/leaflet/webgis/webgis.leaflet.js"></script>
+	<script src="./js/webgis.js"></script>
 	<script src="//sdk.wialon.com/libs/js/dist/wialon-src.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 </head>
