--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta charset="utf-8">
 	<link rel="icon" type="image/png" href="./img/favicon.ico">
 	<title>zanFlow</title>
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+	<link rel="stylesheet" href="./css/leatflet.css" />
 	<script src="./js/leatflet.js"></script>
 	<script type="text/javascript" src="./js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.localisation.js"></script>
